kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pingpong-dev
  labels:
    environment: development
