kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-app-ingress
  namespace: pingpong-dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.priority: "10"
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
  - host: pingpong-dev.stillon.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pingpong-app-service
            port:
              number: 80
